<resources>
    <string name="app_name">ProjectDZ</string>

    <string name="MainDz1Button"> Dz1 </string>
    <string name="MainDz2Button">Dz2</string>
    <string name="MainDz3Button">Dz3</string>
    <string name="MainDz4Button">Dz4</string>
    <string name="MainDz5Button">Dz5</string>
    <string name="MainDz6Button">Dz6</string>
    <string name="MainClasswork2Button"> classwork2 </string>
    <string name="MainClasswork3Button"> classwork3 </string>
    <string name="MainClasswork4Button"> classwork4 </string>
    <string name="MainClasswork5Button"> classwork5 </string>
    <string name="MainClasswork6Button"> classwork6 </string>

    <string name="Dz1text1">Hello</string>
    <string name="Dz1text2">World</string>
    <string name="Dz1buttonUpDown">Reversion</string>

    <string name="classwork2_Edit_name">Name</string>
    <string name="classwork2_Button_login">Login</string>

    <string name="buttonDz3Load">Load</string>
    <string name="Dz3EditText">Url</string>

    <string name="classwork3Button">Button</string>


    <string name="Dz5WiFiIs">WiFi</string>

    <string name="Dz6Load">Load</string>

</resources>
