<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#000000">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="start">


        <TableRow
            style="@style/TableRowMainActivity"
            >

            <Button
                style="@style/DzButton"
                android:id="@+id/MainDz1Button"
                android:text="@string/MainDz1Button"
                />

        </TableRow>

        <TableRow
            style="@style/TableRowMainActivity">


            <Button
                style="@style/DzButton"
                android:id="@+id/MainDz2Button"
                android:text="@string/MainDz2Button" />

            <Button
                android:id="@+id/MainClasswork2Button"
                style="@style/ClassworkButton"
                android:text="@string/MainClasswork2Button" />

        </TableRow>

        <TableRow
            style="@style/TableRowMainActivity">

            <Button
                style="@style/DzButton"
                android:id="@+id/MainDz3Button"
                android:text="@string/MainDz3Button" />

            <Button
                style="@style/ClassworkButton"
                android:id="@+id/MainClasswork3Button"
                android:text="@string/MainClasswork3Button" />

        </TableRow>

        <TableRow
            style="@style/TableRowMainActivity">


            <Button
                android:id="@+id/MainDz4Button"
                style="@style/DzButton"
                android:text="@string/MainDz4Button" />

            <Button
                android:id="@+id/MainClasswork4Button"
                style="@style/ClassworkButton"
                android:text="@string/MainClasswork4Button" />

        </TableRow>

        <TableRow
            style="@style/TableRowMainActivity">


            <Button
                android:id="@+id/MainDz5Button"
                style="@style/DzButton"
                android:text="@string/MainDz5Button" />

            <Button
                android:id="@+id/MainClasswork5Button"
                style="@style/ClassworkButton"
                android:text="@string/MainClasswork5Button" />

        </TableRow>



        <TableRow
            style="@style/TableRowMainActivity">


            <Button
                android:id="@+id/MainDz6Button"
                style="@style/DzButton"
                android:text="@string/MainDz6Button" />

            <Button
                android:id="@+id/MainClasswork6Button"
                style="@style/ClassworkButton"
                android:text="@string/MainClasswork6Button" />

        </TableRow>






    </TableLayout>

</ScrollView>